Commit13
-Exception AdvertisementNameNotFoundException added when trows that SearchAdName not found in Advertises
-function to search by name added